--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "db-connections-templates",
   "version": "0.1.0",
   "description": "Auth0 Connection Scripts Repository",
-  "main": "./src/scripts",
+  "main": "./dist/index.js",
   "scripts": {
+    "build": "npm run clean && node build",
+    "clean": "rimraf dist",
     "test": "jest"
   },
   "repository": {
@@ -17,9 +19,10 @@
   },
   "homepage": "https://github.com/auth0/db-connections-templates",
   "devDependencies": {
-    "async": "2.6.0",
+    "async": "^2.6.0",
     "bcrypt": "^3.0.1",
     "decomment": "0.9.1",
-    "jest": "21.2.1"
+    "jest": "21.2.1",
+    "rimraf": "^2.6.2"
   }
 }
