--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Auth0 Connection Scripts Repository",
   "main": "./db-scripts.json",
   "scripts": {
-    "build": "npm run clean && node build",
-    "clean": "rimraf db-scripts.json",
+    "prebuild": "rimraf db-scripts.json",
+    "build": "node ./build",
     "test": "jest"
   },
   "repository": {
@@ -22,7 +22,14 @@
     "async": "^2.6.0",
     "bcrypt": "^3.0.1",
     "decomment": "0.9.1",
+    "husky": "^1.1.2",
     "jest": "21.2.1",
     "rimraf": "^2.6.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run build",
+      "pre-push": "npm test"
+    }
   }
 }
