--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "devDependencies": {
     "async": "^2.6.0",
     "bcrypt": "^3.0.1",
-    "decomment": "0.9.1",
     "husky": "^1.1.2",
     "jest": "21.2.1",
+    "parse-comments": "^0.4.3",
     "rimraf": "^2.6.2"
   },
   "husky": {
