--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prebuild": "rimraf db-scripts.json",
     "build": "node ./build",
+    "deploy": "node deploy.js",
     "test": "jest"
   },
   "repository": {
@@ -20,7 +21,9 @@
   "homepage": "https://github.com/auth0/db-connections-templates",
   "devDependencies": {
     "async": "^2.6.0",
+    "aws-sdk": "2.359.0",
     "bcrypt": "^3.0.1",
+    "dotenv": "^6.1.0",
     "husky": "^1.1.2",
     "jest": "21.2.1",
     "rimraf": "^2.6.2"
