--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,22 @@
-version: 2
+version: 2.1
 jobs:
   build_and_test:
-    working_directory: ~/auth0-dbscripts
+    parameters:
+      v:
+        type: string
+        default: "8"
     docker:
-      - image: circleci/node:4.9.1
+      - image: circleci/node:<< parameters.v >>
+    working_directory: ~/auth0-dbscripts
     steps:
       - checkout
       - restore_cache:
           keys:
-            - v1-npm-deps-{{ checksum "package-lock.json" }}
-            - v1-npm-deps-
+            - v<< parameters.v >>-npm-deps-{{ checksum "package-lock.json" }}
+            - v<< parameters.v >>-npm-deps-
       - run: npm install
       - save_cache:
-          key: v1-npm-deps-{{ checksum "package-lock.json" }}
+          key: v<< parameters.v >>-npm-deps-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
       - run:
@@ -24,3 +28,9 @@ workflows:
   build_and_test:
     jobs:
       - build_and_test
+      - build_and_test:
+          name: build_and_test_node12
+          v: "12"
+      - build_and_test:
+          name: build_and_test_node13
+          v: "13"
