--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "dotenv": "^6.1.0",
     "husky": "^1.3.1",
     "jest": "21.2.1",
-    "rimraf": "^2.6.2"
+    "mongodb": "3.1.4",
+    "mysql": "^2.18.1",
+    "oracledb": "^4.2.0",
+    "pg": "^7.18.1",
+    "request": "^2.88.2",
+    "rimraf": "^2.6.2",
+    "tedious": "1.11.0"
   },
   "husky": {
     "hooks": {
