--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "homepage": "https://github.com/auth0/db-connections-templates",
   "devDependencies": {
     "async": "^2.6.0",
-    "aws-sdk": "2.359.0",
+    "aws-sdk": "^2.610.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^6.1.0",
     "husky": "^1.3.1",
     "jest": "21.2.1",
-    "mongodb": "3.1.4",
+    "mongodb": "^3.1.4",
     "mysql": "^2.18.1",
     "oracledb": "^4.2.0",
     "pg": "^7.18.1",
